# Colouriser

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindTinyXML.cmake
src/: main.cpp
